refactor the folder according to the template